# knowbot-ai

./: .env.sample  .gitignore  README.md  TODO.md  app.py  main.py  pyproject.toml  requirements.txt  tasks.py
.github/scripts/: keepalive.js
.github/workflows/: keepalive.yml
app/config/: __init__.py  constants.py  logging.py
app/ui/: __init__.py  streamlit_app.py
config/: logger.py  qdrant.py
lib/clients/: __init__.py  corenest.py  qdrant.py
lib/pipeline/: ingestion.py  rag.py  topics.yaml
lib/pipeline/prompts/: system_prompt.txt
lib/tasks/: __init__.py  one_time.py
lib/utils/: __init__.py  markdown.py
streamlit_ui/: gui.py
tests/: test_corenest.py  test_ingestion.py  test_qdrant.py  test_rag.py  test_streamlit_app.py
utils/: constants.py
utils/helpers/: corenest.py  injector.py  qdrant.py  topics_list.py
utils/prompts/: user_prompt.txt
utils/streamlit/: gui.py
utils/tasks/: one_time_tasks.py
